--- a/Presentation/Nop.Web/Views/Customer/Login.cshtml
+++ b/Presentation/Nop.Web/Views/Customer/Login.cshtml
@@ -49,19 +49,19 @@
             }
             else
             {
-                <div class="new-wrapper register-block">
-                    <div class="title">
-                        <strong>@T("Account.Login.NewCustomer")</strong>
-                    </div>
-                    <div class="text">
-                        @T("Account.Login.NewCustomerText")
-                    </div>
-                    <div class="buttons">
-                        <input type="button" class="button-1 register-button" onclick="location.href='@registerUrl'" value="@T("Account.Register")" />
-                    </div>
-                </div>
+                //<div class="new-wrapper register-block">
+                    //<div class="title">
+                        //<strong>@T("Account.Login.NewCustomer")</strong>
+                    //</div>
+                    //<div class="text">
+                        //@T("Account.Login.NewCustomerText")
+                   // </div>
+                    //<div class="buttons">
+                       // <input type="button" class="button-1 register-button" onclick="location.href='@registerUrl'" value="@T("Account.Register")" />
+                    //</div>
+                //</div>
             }
-            <div class="returning-wrapper fieldset">
+            <div class="returning-wrapper fieldset" style="float: inherit;margin: auto;">
                 <form asp-route="Login" asp-route-returnurl="@Context.Request.Query["ReturnUrl"]" method="post" autocomplete="off">
                     <div asp-validation-summary="ModelOnly" class="message-error">@T("Account.Login.Unsuccessful")</div>
                     <div class="title">
@@ -84,7 +84,7 @@
                                 <span asp-validation-for="Email"></span>
                             </div>
                         }
-                        <div class="inputs">
+                        <div class="inputs" id="Loginpassword">
                             <label asp-for="Password" asp-postfix=":"></label>
                             <input asp-for="Password" class="password" />
                             <span asp-validation-for="Password"></span>
@@ -113,3 +113,13 @@
         @await Component.InvokeAsync("TopicBlock", new { systemName = "LoginRegistrationInfo" })
     </div>
 </div>
+<Script src="~/wwwroot/lib/kendo/2020.1.406/js/jquery.min.js</Script>
+<script type="text/javascript">
+$( document ).ready(function() {
+debugger;
+$('#Loginpassword').css('display','none');
+   $("#Loginpassword").hide();
+
+});
+
+</script>
